# wxchat

./: Cargo.toml  config.json  package.json  pnpm-lock.yaml
src/: App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/data/system/: config.json
src-tauri/resources/data/user/: groups.json
src-tauri/src/: executor.rs  lib.rs  main.rs
src-tauri/src/openapi/: auth.rs  base.rs  client.rs  error.rs  login.rs  member.rs  message.rs  mod.rs  rule.rs  tool.rs
src/component/: WxBan.vue  WxLogin.vue  WxMember.vue  WxRule.vue  WxUser.vue
src/openapi/: base.rs  client.rs  login.rs  member.rs  message.rs  mod.rs  rule.rs  tool.rs
src/stores/: global_store.ts
